@@ -63,6 +63,7 @@ Changes in 2.8
 - Solve conflict student/user_id=new in Side.php
 - Find a User/Student forms: method=GET + correct URL in Search.inc.php & warehouse.js
 - Remove double space before ChooseCheckbox + CSS programwide
+- Prevent $_REQUEST['category_id'] hacking in Student.php & User.php
 
 Upgrade from 2.7.x
 ------------------
